--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* 
-body{
-    /* background-color: white; 
-}
 
- */
+body{
+    width: 100%;
+    height: 100%;
+}
